--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -29,20 +29,12 @@ jobs:
           python3-dev \
           python3-pip \
           python3-setuptools \
-          python3-tk \
-          python3-lxml \
           libssl-dev \
           libffi-dev \
           libncurses5-dev \
           libncursesw5-dev \
           libtinfo5 \
-          cmake \
-          libfreetype6-dev \
-          libharfbuzz-dev \
-          libpango1.0-dev \
-          libgstreamer1.0-dev \
-          gstreamer1.0-plugins-base \
-          gstreamer1.0-plugins-good
+          cmake
 
     - name: Install Java 17
       uses: actions/setup-java@v3
