Add missing cython dependency

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -47,6 +47,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install buildozer
         pip install kivy[base]
+        pip install cython
 
     - name: Cache buildozer global directory
       uses: actions/cache@v3
