Extend patch to cover long in dictionary definitions

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -68,6 +68,9 @@ jobs:
         find .buildozer -name "*.pxi" -exec sed -i 's/isinstance(arg, long)/isinstance(arg, int)/g' {} \;
         find .buildozer -name "*.pxi" -exec sed -i 's/, long)/, int)/g' {} \;
         find .buildozer -name "*.pxi" -exec sed -i 's/(long/(int/g' {} \;
+        find .buildozer -name "*.pxi" -exec sed -i 's/long: /int: /g' {} \;
+        find .buildozer -name "*.pxi" -exec sed -i "s/long: '/int: '/g" {} \;
+        
 
     - name: Build APK with Buildozer
       run: |
