Add patches for .pxd files and function signature compatibility

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -78,6 +78,10 @@ jobs:
         find .buildozer -name "*.pyx" -exec sed -i 's/= long(/= int(/g' {} \;
         find .buildozer -name "*.pyx" -exec sed -i 's/def long(self):/def __int__(self):/g' {} \;
         find .buildozer -name "*.pyx" -exec sed -i 's/return long(/return int(/g' {} \;
+        find .buildozer -name "*.pyx" -exec sed -i 's/cdef long long size/cdef long long size/g' {} \;
+        # Fix .pxd files  
+        find .buildozer -name "*.pxd" -exec sed -i 's/cdef long size/cdef long long size/g' {} \;
+        find .buildozer -name "*.pxd" -exec sed -i 's/cdef void grow(self, long/cdef void grow(self, long long/g' {} \;
         
 
     - name: Build APK with Buildozer
